<resources>
    <string name="app_name">My Movie Catalogue</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="movie_search">Movie search…</string>
    <string name="_9_0">9.0</string>
    <string name="rating">Rating</string>
    <string name="en">EN</string>
    <string name="language">Language</string>
    <string name="genres">Genres</string>
    <string name="release">Release Date</string>
    <string name="_2018_08_08">2018–08–08</string>
    <string name="overview">Overview</string>
    <string name="this_is_overview">This is overview.</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Upcoming</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="search_movie">Search Movie</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="favorite">Favorite</string>
    <string name="no_items">No Items</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="item_added">One item was successfully added</string>
    <string name="item_deleted">one item was successfully deleted</string>
    <string name="appwidget_text">FAVORITE MOVIES</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="title">Movie Catalogue</string>
    <string name="daily_description">Movie Catalogue missing you!</string>
    <string name="daily_on">Daily notification is turned on</string>
    <string name="daily_off">Daily notification is turned off</string>
    <string name="today_release_on">Today release notification is turned on</string>
    <string name="today_release_off">Today release notification is turned off</string>
    <string name="today_release">has been release today!</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="daily_key">daily_key</string>
    <string name="release_key">release_key</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_summary">Reminder for return to the app every 7 am</string>
    <string name="release_reminder_title">Today Release Reminder</string>
    <string name="release_reminder_summary">Reminder for showing movie that release today</string>
    <string name="reminder_settings">Reminder settings</string>
</resources>
